history card gapping issue fixed

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,8 @@ button {
 #histories {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
   justify-content: space-around;
 }
 
